pokemonImgs can be initialized and will be downloaded, if the first one is not there and all the other one will be replaced with an "error image" if it does not exist